--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.android.support:support-v4:23.1.1'
+
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.7'
 }
